unpackaged/main/default/objects/metazoa_snapshot_story__c/fields/metazoa_constraint_date__c.field-meta.xml
<CustomField>
	<fullName>metazoa_constraint_date__c</fullName>
	<label>Constraint Date</label>
	<type>Date</type>
</CustomField>