unpackaged/main/default/objects/metazoa_snapshot_story__c/fields/metazoa_constraint_type__c.field-meta.xml
<CustomField>
	<fullName>metazoa_constraint_type__c</fullName>
	<label>Constraint Type</label>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value>
				<fullName>No Constraint</fullName>
			</value>
			<value>
				<fullName>Fixed Start Date</fullName>
			</value>
			<value>
				<fullName>Fixed Finish Date</fullName>
			</value>
			<value>
				<fullName>Must Start After</fullName>
			</value>
			<value>
				<fullName>Must Finish After</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>