unpackaged/main/default/objects/metazoa_snapshot_story__c/fields/metazoa_functional_specifications__c.field-meta.xml
<CustomField>
	<fullName>metazoa_functional_specifications__c</fullName>
	<label>Functional Specifications</label>
	<length>30000</length>
	<type>LongTextArea</type>
</CustomField>