unpackaged/main/default/objects/metazoa_snapshot_story__c/fields/metazoa_kanban_stage__c.field-meta.xml
<CustomField>
	<fullName>metazoa_kanban_stage__c</fullName>
	<label>Kanban Stage</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Draft</fullName>
			</value>
			<value>
				<fullName>Backlog</fullName>
			</value>
			<value>
				<fullName>Requested</fullName>
			</value>
			<value>
				<fullName>Developing</fullName>
			</value>
			<value>
				<fullName>Waiting</fullName>
			</value>
			<value>
				<fullName>Testing</fullName>
			</value>
			<value>
				<fullName>Deployment</fullName>
			</value>
			<value>
				<fullName>Finished</fullName>
			</value>
			<value>
				<fullName>Archived</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>