unpackaged/main/default/objects/metazoa_snapshot_story__c/fields/metazoa_parent_links__c.field-meta.xml
<CustomField>
	<fullName>metazoa_parent_links__c</fullName>
	<label>Parent Links</label>
	<length>200</length>
	<type>Text</type>
</CustomField>