unpackaged/main/default/objects/metazoa_snapshot_story__c/fields/metazoa_planned_work__c.field-meta.xml
<CustomField>
	<fullName>metazoa_planned_work__c</fullName>
	<label>Planned Work</label>
	<precision>18</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>