unpackaged/main/default/objects/metazoa_snapshot_story__c/fields/metazoa_snapshot_sprint__c.field-meta.xml
<CustomField>
	<fullName>metazoa_snapshot_sprint__c</fullName>
	<label>Snapshot Sprint</label>
	<referenceTo>metazoa_snapshot_sprint__c</referenceTo>
	<relationshipLabel>Snapshot Stories</relationshipLabel>
	<relationshipName>Snapshot_Stories</relationshipName>
	<relationshipOrder>0</relationshipOrder>
	<reparentableMasterDetail>true</reparentableMasterDetail>
	<type>MasterDetail</type>
</CustomField>