unpackaged/main/default/objects/metazoa_snapshot_story__c/fields/metazoa_source_username__c.field-meta.xml
<CustomField>
	<fullName>metazoa_source_username__c</fullName>
	<label>Source Username</label>
	<length>200</length>
	<type>Text</type>
</CustomField>