unpackaged/main/default/objects/metazoa_snapshot_story__c/fields/metazoa_story_documentation__c.field-meta.xml
<CustomField>
	<fullName>metazoa_story_documentation__c</fullName>
	<label>Story Documentation</label>
	<length>30000</length>
	<type>LongTextArea</type>
</CustomField>