unpackaged/main/default/objects/metazoa_snapshot_story__c/fields/metazoa_story_owner__c.field-meta.xml
<CustomField>
	<fullName>metazoa_story_owner__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Story Owner</label>
	<referenceTo>User</referenceTo>
	<relationshipName>Snapshot_Stories_User</relationshipName>
	<type>Lookup</type>
</CustomField>