unpackaged/main/default/objects/metazoa_snapshot_story__c/fields/metazoa_story_theme__c.field-meta.xml
<CustomField>
	<fullName>metazoa_story_theme__c</fullName>
	<label>Story Theme</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Coding</fullName>
				<color>#0B6FCE</color>
				<label>Coding</label>
			</value>
			<value>
				<fullName>Metadata</fullName>
				<color>#78C953</color>
				<label>Metadata</label>
			</value>
			<value>
				<fullName>Security</fullName>
				<color>#E27001</color>
				<label>Security</label>
			</value>
			<value>
				<fullName>Compliance</fullName>
			</value>
			<value>
				<fullName>Optimization</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>