unpackaged/main/default/objects/metazoa_snapshot_story__c/fields/metazoa_technical_specifications__c.field-meta.xml
<CustomField>
	<fullName>metazoa_technical_specifications__c</fullName>
	<label>Technical Specifications</label>
	<length>30000</length>
	<type>LongTextArea</type>
</CustomField>