unpackaged/main/default/objects/metazoa_snapshot_story__c/fields/metazoa_total_duration__c.field-meta.xml
<CustomField>
	<fullName>metazoa_total_duration__c</fullName>
	<label>Total Duration</label>
	<precision>18</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>