unpackaged/main/default/objects/metazoa_snapshot_story__c/fields/metazoa_user_story__c.field-meta.xml
<CustomField>
	<fullName>metazoa_user_story__c</fullName>
	<label>User Story</label>
	<length>3000</length>
	<type>LongTextArea</type>
</CustomField>