unpackaged/main/default/objects/metazoa_snapshot_story__c/fields/metazoa_working_branch__c.field-meta.xml
<CustomField>
	<fullName>metazoa_working_branch__c</fullName>
	<label>Working Branch</label>
	<length>200</length>
	<type>Text</type>
</CustomField>